# photo-asset-manager

./: .gitignore  Package.swift  README.md  feature.md
Sources/PhotoAssetManager/: ContentView.swift  FileOperations.swift  LibraryStore.swift  Models.swift  NASMountManager.swift  PhotoAssetManagerApp.swift  PhotoScanner.swift  SQLiteDatabase.swift  SyncControlPlane.swift  SyncLedger.swift
Sources/PhotoAssetManager/Resources/: Info.plist
Tests/PhotoAssetManagerTests/: CaptureTimeBackfillTests.swift  SidebarUXTests.swift  StartupPerformanceTests.swift  SyncLedgerTests.swift
control_plane/: .dockerignore  Dockerfile  README.md  pyproject.toml
control_plane/control_plane/: app.py  db.py  lambda_handler.py  schemas.py
control_plane/tests/: test_api.py
docs/: ARCHITECTURE.md  AURORA_EVENT_STORE_PLAN.md  MEMORY.md
infra/terraform/: README.md  aurora.tf  backend.tf  backend.tf.example  endpoints.tf  main.tf  networking.tf  outputs.tf  runtime.tf  s3.tf  state.tf  variables.tf
ios/PhotoAssetManagerIOS.xcodeproj/: project.pbxproj
ios/Sources/PhotoAssetManagerIOS/: IOSLibraryStore.swift  PhotoAssetManagerIOSApp.swift  WaterfallGalleryView.swift
macos/: Package.swift  README.md
macos/Sources/PhotoAssetManager/: ContentView.swift  DateCoding.swift  FileHasher.swift  LibraryStore.swift  Models.swift  PerformanceLog.swift  PhotoAssetManagerApp.swift  PhotoScanner.swift  SQLiteDatabase.swift  SyncBootstrapper.swift  SyncControlPlane.swift  SyncLedger.swift
macos/scripts/: pre_merge_gate.sh
scripts/: package_app.sh  pre_merge_gate.sh
(+4 files in other folders)
