[project]
name = "photo-asset-manager-control-plane"
version = "0.1.0"
description = "Aurora authoritative event store control-plane API for Photo Asset Manager"
requires-python = ">=3.11"
dependencies = [
  "boto3>=1.34",
  "fastapi>=0.115",
  "mangum>=0.19",
  "psycopg[binary]>=3.1",
  "pydantic>=2.7",
  "sqlalchemy>=2.0",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
test = [
  "httpx>=0.27",
  "pytest>=8.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
